v2.4.6/tqdm/tqdm_galaxy_llm.md
# ARCHITECTURAL_BRIEF: tqdm
> INSTRUCTION: Deterministic Syntactic Analysis. Base architectural insights on Structural Magnitude, Extracted Signatures, and Risk overlays.

## 0. FORENSIC TRACEABILITY
| Metadata | Value |
|---|---|
| **Engine** | `GitGalaxy Scope vlatest (Delta Mode)` |
| **Target Path** | `/srv/storage_16tb/projects/gitgalaxy/data/pypi_top_200/tqdm` |
| **Timestamp** | `2026-08-03T21:25:49.931198+00:00` |
| **Scan Duration** | `0.42s` |
| **Git Branch** | `N/A` |
| **Git Commit** | `N/A` |
| **Git Remote** | `N/A` |
| **Zero-Dependency Mode** | `Inactive (Full Precision)` |

## 0.5 AI THREAT AUDIT STATUS
> **🚨 ML_CONFIRMED_THREAT_DETECTED**
> XGBoost Structural Signatures model identified 63 malicious artifacts.

## 1. SYSTEM ROLE & PHILOSOPHY
> You are analyzing software architecture through the lens of GitGalaxy Static Application Security Testing (SAST). GitGalaxy translates the non-visual architecture of repositories into measurable technical metrics.
> 
> **CORE DIRECTIVES:**
> 1. **Measure Risk, Not Quality:** Do not judge. We measure Risk Exposure (e.g., Cognitive Load Exposure). Frame all insights as blameless, objective observations. High risk highlights where the architecture might be drifting into fragile territory, not developer incompetence.
> 2. **The Physical Reality Rule:** Base your analysis strictly on the provided Structural Signatures (regex hit counts). Do not hallucinate meaning.
> 3. **Risk vs. Defense:** Code is a balance. A file with high `flux` (state mutation) is risky unless balanced by `freeze_hits` (immutability). High `danger` is brittle unless wrapped in `safety`.
> 
> **THE STRUCTURAL SIGNATURE LEXICON:**
> * **Structure & Mass:** `branch` (splits), `linear` (paths), `args` (coupling), `func_start` (entry points).
> * **Risk & Volatility:** `danger` (dynamic execution), `flux` (state mutation), `graveyard` (commented-out logic), `safety_neg` (security bypasses).
> * **Architecture & Domain:** `io` (network latency), `concurrency` (async orchestration), `api` (public surface), `import` (dependencies).
> * **Defensive Guardrails:** `safety` (Error handling), `freeze_hits` (immutability), `cleanup` (state destruction).
## 2. THE 13-POINT RISK EXPOSURE ANALYSIS (EQUATIONS & CONTEXT)
> **How the SAST Engine Calculates Risk Exposure (Lower Risk 0 - Higher Risk Exposure 100%):**
> Most scores use a Sigmoid curve based on density (Hits / LOC) to prevent massive files from mathematically hiding their flaws.
> 
> 1. **Cognitive Load Exposure:** Measures the mental effort required for a developer to read and understand the file. `Density(Branches + (Flux * 2) + Async/Danger)` mitigated by `Doc Coverage`.
> 2. **Error & Exception Risk Exposure:** Measures structural integrity and resilience against runtime errors. `Net Exposure = (Danger + Safety_Neg + Flux) - (Safety + Tests + Docs)`.
> 3. **Tech Debt Exposure:** Measures the density of developer-annotated structural stress. `Density(TODOs [1x] + FIXMEs/Hacks [3x] + Empty Stubs [0.5x])`.
> 4. **Verification Risk Exposure:** Evaluates test coverage by comparing a function's structural complexity against the scope of the tests validating it.
> 5. **API Risk Exposure:** Measures the public surface area of a module. `Ratio(API Hits / Total Functions & Classes)`.
> 6. **Concurrency Risk Exposure:** Measures the density of asynchronous operations, threading, and parallel execution logic.
> 7. **State Flux Risk Exposure:** Measures the frequency of data mutation and variable reassignment.
> 8. **Commented Logic (dead code):** Measures the presence of abandoned, commented-out logic blocks.
> 9. **Spec Match Risk Exposure:** Measures how closely code aligns with formal specifications or architectural requirements.
> 10. **Stability:** Measures the recency of edits relative to the repository's entire lifespan.
> 11. **Deep Churn:** Measures the historical volatility and frequency of modification.
> 12. **Documentation Risk Exposure:** Measures the lack of structured documentation and ownership metadata.
> 13. **Indentation Consistency:** Measures formatting alignment (Tabs vs. Spaces). Provided for codebase standardization context, not a functional risk.
> 
> **--- THE SECURITY & VULNERABILITY LENS ---**
> 14. **Obfuscation & Evasion Risk:** Measures the density of obfuscated logic, packed strings, and non-standard encoding.
> 15. **Logic Bomb / Sabotage Risk:** Measures condition-heavy execution leading to destructive OS, memory, or process commands.
> 16. **Injection Surface Risk Exposure:** Measures external network/I/O input flowing directly into dynamic execution contexts (XSS, SQLi, RCE).
> 17. **Memory Corruption Risk Exposure:** Measures the density of raw pointer math and manual memory allocations (Buffer Overflows, UAF).
> 18. **Secrets Risk Exposure:** Measures the presence of hardcoded credentials exposed to logs or globals.
> 
> **--- STRUCTURAL MAGNITUDE (NOT RISK) ---**
> **19. Function Magnitude (Impact Score):** Measures the physical footprint and 'heaviness' of a specific function. `((BranchHits + 1) * (Args + 1) + (0.05 * LOC)) * 10`. This is NOT a risk score.
> **20. File Magnitude (Total Impact):** Measures the total structural impact of a file. `Sum(Function Impacts) + API + Concurrency + Flux + (LOC / 50)`. This is NOT a risk score.

## 3. MACRO STATE
| Metric | Value |
|---|---|
| Total Artifacts | 81 |
| Analyzed Artifacts (Scanned) | 68 |
| Excluded Artifacts (Unparsable data, binaries, unsupported formats) | 13 |
| Total LOC | 5763 |
| Volatility Index | 0.0 |
| % Scanned of codebase = | 84.0% |
| Dominant Lang | PYTHON |

## 3.5 MACRO-NETWORK TOPOLOGY (Resilience & Coupling)
| Metric | Value | Interpretation |
|---|---|---|
| Modularity | 0.4826 | High = Clean micro-boundaries. Low = Spaghetti coupling. |
| Assortativity | -0.3862 | Positive = Resilient core. Negative = Fragile single-points-of-failure. |
| Cyclic Density | 2.9% | % of files trapped in dependency loops (Static Friction). |
| Avg Path Length | 2.6851 | Hops between files. Lower = Tighter coupling. |
| Articulation Pts | 8 | Number of single files that, if removed, shatter the network. |

## 4. COMPOSITION
| Lang | Files | LOC | Share |
|---|---|---|---|
| PYTHON | 61 | 5560 | 89.7% |
| MARKDOWN | 3 | 0 | 4.4% |
| PLAINTEXT | 1 | 0 | 1.5% |
| MAKEFILE | 1 | 148 | 1.5% |
| YAML | 1 | 41 | 1.5% |
| SHELL | 1 | 14 | 1.5% |

## 4.5 REPOSITORY ECOSYSTEM BASELINE (GLOBAL ARCHITECTURE)
> **Assigned Ecosystem Baseline:** `Cluster 3`
> **Architectural Drift Z-Score:** `6.526`
> **⚠️ UNIQUE INTERPRETATION:** This repository has a high Z-Score. While it maps closest to this archetype, its internal structure is a highly unique or hybrid interpretation of the pattern.

## 4.6 FILE ARCHETYPES & STATIC ASSETS
### Active Execution Logic (ML Clusters)
| Archetype | Count | Repo % |
|---|---|---|
| file_cluster_13 | 48 | 70.6% |
| file_cluster_8 | 10 | 14.7% |
| file_cluster_4 | 4 | 5.9% |
| file_cluster_0 | 2 | 2.9% |

### Inert Structural Mass (Static Categories)
| Category | Count | Repo % |
|---|---|---|
| Static: Literature & Documentation | 4 | 5.9% |

## 5. EXCLUDED ARTIFACTS (Unparsable or Shielded Files)
*Total Excluded Artifacts: 13*

**Composition by Extension & Reason:**
- `.ipynb`: 2x Excluded (Unsupported Extension: '.ipynb')
- `.yaml`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.json`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `no_extension`: 1x Unsupported Format (.undeterminable)
- `.rst`: 1x Excluded (Unsupported Extension: '.rst')
- `.bib`: 1x Excluded (Unsupported Extension: '.bib')
- `.png`: 1x Excluded (Explicitly Denied Extension: '.png')
- `.toml`: 1x Excluded (Unsupported Extension: '.toml')
- `.cfg`: 1x Excluded (Unsupported Extension: '.cfg')
- `.py`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.ini`: 1x Excluded (Unsupported Extension: '.ini')
- `.1`: 1x Excluded (Machine-Generated Source Code Signature: 244 LOC)

## 6. RISK EXPOSURE ANALYSIS (0-100%)
| Risk Vector | Min | Max | Mean | Med | Mode |
|---|---|---|---|---|---|
| Cognitive Load Exposure | 1.5 | 49.5 | 16.5 | 6.6 | 5.0 |
| Error & Exception Exposure | 0.0 | 80.0 | 20.4 | 5.1 | 0.0 |
| Tech Debt Exposure | 0.0 | 100.0 | 12.1 | 0.0 | 0.0 |
| Testing Exposure | 0.0 | 80.0 | 19.3 | 1.1 | 0.0 |
| API Exposure | 0.0 | 10.9 | 3.8 | 3.5 | 0.0 |
| Concurrency Exposure | 0.0 | 100.0 | 10.8 | 0.0 | 0.0 |
| State Flux Exposure | 0.0 | 100.0 | 29.9 | 0.0 | 0.0 |
| Commented Logic Exposure | 0.0 | 99.3 | 2.7 | 0.0 | 0.0 |
| Specification Exposure | 6.7 | 100.0 | 83.6 | 100.0 | 100.0 |
| Instability Exposure | 50.0 | 50.0 | 50.0 | 50.0 | 50.0 |
| Volatility Exposure | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Documentation Exposure | 0.0 | 100.0 | 40.3 | 15.1 | 0.0 |
| Algorithmic DoS Exposure | 0.0 | 100.0 | 53.9 | 83.4 | 100.0 |
| Obfuscation & Evasion Surface | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Exploit Generation Surface | 0.0 | 100.0 | 37.2 | 0.0 | 0.0 |
| Weaponizable Injection Vectors | 0.0 | 100.0 | 3.1 | 0.0 | 0.0 |
| Raw Memory Manipulation | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Hardcoded Payload Artifacts | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |

## 7. ARCHITECTURAL CHOKE POINTS & DEPENDENCIES
### Top I/O Latency Risks
- `tqdm-4.67.3/tests/tests_main.py` (Hits: 50)
- `tqdm-4.67.3/tests/tests_tqdm.py` (Hits: 29)
- `tqdm-4.67.3/tqdm/completion.sh` (Hits: 20)

### Top 5 Structural Pillars (Highest 'Imported By' / Blast Radius)
These are the most interconnected files relative to the rest of this repository. On a repo with dense internal coupling, that means core load-bearing infrastructure -- changes carry real cascading-break risk. On a repo with a flatter internal architecture, the gap between #1 and #5 may be small, and this list is a weaker signal accordingly; compare the connection counts below before treating it as a verdict.

1. **std.py** (`tqdm-4.67.3/tqdm/std.py`) — 20 inbound connections
2. **auto.py** (`tqdm-4.67.3/tqdm/auto.py`) — 16 inbound connections
3. **tests_tqdm.py** (`tqdm-4.67.3/tests/tests_tqdm.py`) — 14 inbound connections
4. **notebook.py** (`tqdm-4.67.3/tqdm/notebook.py`) — 6 inbound connections
5. **utils.py** (`tqdm-4.67.3/tqdm/utils.py`) — 6 inbound connections

### Top 5 Orchestrators (Highest 'Imports' / Fragility Index)
These files pull in the most external dependencies. They are highly coupled and fragile to API changes.

1. **std.py** (`tqdm-4.67.3/tqdm/std.py`) — 25 outbound dependencies
2. **utils.py** (`tqdm-4.67.3/tqdm/utils.py`) — 18 outbound dependencies
3. **tests_tqdm.py** (`tqdm-4.67.3/tests/tests_tqdm.py`) — 17 outbound dependencies
4. **notebook.py** (`tqdm-4.67.3/tqdm/notebook.py`) — 12 outbound dependencies
5. **cli.py** (`tqdm-4.67.3/tqdm/cli.py`) — 10 outbound dependencies

## 8. CORE FUNCTION HITLIST (Heaviest Functions)
> *Note: The 'Impact' metric below represents Structural Magnitude (complexity, arguments, and length), NOT operational risk. These are the load-bearing pillars of the logic.*

- `format_meter` (@ `tqdm-4.67.3/tqdm/std.py`) -> Impact: **7855.4** | LOC: 869
- `test_eta` (@ `tqdm-4.67.3/tests/tests_tqdm.py`) -> Impact: **910.9** | LOC: 881
- `test_pipes` (@ `tqdm-4.67.3/tests/tests_main.py`) -> Impact: **423.1** | LOC: 218
- `test_dynamic_min_iters` (@ `tqdm-4.67.3/tests/tests_tqdm.py`) -> Impact: **353.4** | LOC: 279
  * *Intent:* # Check with smoothing=0, miniters should be set to max update seen so far with closing(StringIO()) as our_file: total = 10 t = tqdm(total=total, file...
- `main` (@ `tqdm-4.67.3/tqdm/cli.py`) -> Impact: **317.3** | LOC: 163
- `__init__` (@ `tqdm-4.67.3/tqdm/notebook.py`) -> Impact: **254.6** | LOC: 91
- `display` (@ `tqdm-4.67.3/tqdm/notebook.py`) -> Impact: **227.5** | LOC: 52
- `progresser` (@ `tqdm-4.67.3/examples/parallel_bars.py`) -> Impact: **178.4** | LOC: 40
- `simple_progress` (@ `tqdm-4.67.3/tests/tests_perf.py`) -> Impact: **170.8** | LOC: 57
- `cast` (@ `tqdm-4.67.3/tqdm/cli.py`) -> Impact: **166.3** | LOC: 36

## 8.5 ALGORITHMIC & DATABASE BOTTLENECKS
> Highlights the most computationally expensive and database-heavy functions across the repository.

### Highest Time Complexity (Big-O)
- `test_pipes` (@ `tqdm-4.67.3/tests/tests_main.py`) -> **O(2^N) [Recursive]**
- `write` (@ `tqdm-4.67.3/tqdm/contrib/slack.py`) -> **O(2^N) [Recursive]**
- `display` (@ `tqdm-4.67.3/tqdm/contrib/slack.py`) -> **O(2^N) [Recursive]**
  * *Intent:* """ def __init__(self, *args, **kwargs): """
- `__init__` (@ `tqdm-4.67.3/tqdm/gui.py`) -> **O(2^N) [Recursive]**
- `__init__` (@ `tqdm-4.67.3/tqdm/rich.py`) -> **O(2^N) [Recursive]**
- `format_meter` (@ `tqdm-4.67.3/tqdm/std.py`) -> **O(2^N) [Recursive]**
- `__init__` (@ `tqdm-4.67.3/tqdm/tk.py`) -> **O(2^N) [Recursive]**
  * *Intent:* """ Experimental Tkinter GUI version of tqdm! Note: Window interactivity suffers if `tqdm_tk` is not running within a Tkinter mainloop and values are ...
- `progresser` (@ `tqdm-4.67.3/examples/parallel_bars.py`) -> **O(2^N) [Recursive]**
- `as_completed` (@ `tqdm-4.67.3/tqdm/asyncio.py`) -> **O(2^N) [Recursive]**
- `write` (@ `tqdm-4.67.3/tqdm/contrib/__init__.py`) -> **O(2^N) [Recursive]**

### Highest Data Gravity (Database Complexity)
- `test_pipes` (@ `tqdm-4.67.3/tests/tests_main.py`) -> DB Complexity: **138**
- `format_meter` (@ `tqdm-4.67.3/tqdm/std.py`) -> DB Complexity: **115**
- `test_eta` (@ `tqdm-4.67.3/tests/tests_tqdm.py`) -> DB Complexity: **104**
- `_tqdm` (@ `tqdm-4.67.3/tqdm/completion.sh`) -> DB Complexity: **64**
  * *Intent:* #!/usr/bin/env bash
- `main` (@ `tqdm-4.67.3/tqdm/cli.py`) -> DB Complexity: **60**
- `__init__` (@ `tqdm-4.67.3/tqdm/notebook.py`) -> DB Complexity: **19**
- `std_out_err_redirect_tqdm` (@ `tqdm-4.67.3/examples/redirect_print.py`) -> DB Complexity: **18**
- `test_dynamic_min_iters` (@ `tqdm-4.67.3/tests/tests_tqdm.py`) -> DB Complexity: **18**
  * *Intent:* # Check with smoothing=0, miniters should be set to max update seen so far with closing(StringIO()) as our_file: total = 10 t = tqdm(total=total, file...
- `__init__` (@ `tqdm-4.67.3/tqdm/gui.py`) -> DB Complexity: **14**
- `restore_sys` (@ `tqdm-4.67.3/tests/tests_main.py`) -> DB Complexity: **12**

## 9. DIRECTORY GROUPS (Top 10 Heaviest Modules)
| Folder Path | Files | Total Impact | Avg Cog Load | Avg Debt |
|---|---|---|---|---|
| `tqdm-4.67.3/tqdm` | 23 | 15860.88 | 21.03% | 24.25% |
| `tqdm-4.67.3/tests` | 19 | 3909.08 | 6.0% | 0.0% |
| `tqdm-4.67.3/examples` | 12 | 600.44 | 16.66% | 0.0% |
| `tqdm-4.67.3` | 5 | 65.18 | 1.78% | 4.22% |
| `tqdm-4.67.3/tqdm/contrib` | 9 | 11.6 | 27.55% | 21.68% |

## 10. TARGETED RISK VECTORS (Top 5 by Exposure)
### Highest Tech Debt (Fragile/Planned)
- `tqdm-4.67.3/tqdm/rich.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tqdm/completion.sh` -> **99.9999%** Exposure
- `tqdm-4.67.3/tqdm/dask.py` -> **99.999%** Exposure
- `tqdm-4.67.3/tqdm/contrib/slack.py` -> **99.6272%** Exposure
- `tqdm-4.67.3/tqdm/__init__.py` -> **98.783%** Exposure
### Highest State Flux (Mutation/Volatility)
- `tqdm-4.67.3/tqdm/gui.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tqdm/keras.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tqdm/completion.sh` -> **100.0%** Exposure
- `tqdm-4.67.3/tqdm/asyncio.py` -> **99.9996%** Exposure
- `tqdm-4.67.3/tqdm/tk.py` -> **99.9995%** Exposure
### Highest Design Slop (Dead & Duplicated Logic)
- `tqdm-4.67.3/tests/tests_contrib_logging.py` -> **10** Orphaned Functions | **4** Duplicates
- `tqdm-4.67.3/tests/tests_asyncio.py` -> **7** Orphaned Functions | **0** Duplicates
- `tqdm-4.67.3/tests/tests_synchronisation.py` -> **7** Orphaned Functions | **0** Duplicates
- `tqdm-4.67.3/tests/tests_pandas.py` -> **6** Orphaned Functions | **0** Duplicates
- `tqdm-4.67.3/tests/tests_perf.py` -> **6** Orphaned Functions | **0** Duplicates

## 10.5 AI THREAT INTELLIGENCE (XGBoost)
> **CRITICAL THREATS DETECTED.** The following files possess the structural signatures of known vulnerabilities.

1. **`tqdm-4.67.3/examples/7zx.py`** -> AI Confidence: **99.31%**
2. **`tqdm-4.67.3/tqdm/cli.py`** -> AI Confidence: **99.31%**
3. **`tqdm-4.67.3/tqdm/gui.py`** -> AI Confidence: **99.31%**
4. **`tqdm-4.67.3/tqdm/notebook.py`** -> AI Confidence: **99.31%**
5. **`tqdm-4.67.3/tqdm/std.py`** -> AI Confidence: **99.31%**
6. **`tqdm-4.67.3/tqdm/tk.py`** -> AI Confidence: **99.31%**
7. **`tqdm-4.67.3/tqdm/contrib/logging.py`** -> AI Confidence: **99.17%**
8. **`tqdm-4.67.3/tests/tests_tqdm.py`** -> AI Confidence: **99.16%**
9. **`tqdm-4.67.3/tqdm/contrib/concurrent.py`** -> AI Confidence: **99.16%**
10. **`tqdm-4.67.3/tqdm/utils.py`** -> AI Confidence: **99.16%**

## 10.6 WEAPONIZABLE SURFACE EXPOSURES (RULE-BASED SAST)
> Secondary Evidence: The following files tripped specific static threat signatures. Use these to explain *why* the XGBoost model flagged the files above.

### Exploit Generation Surface
- `tqdm-4.67.3/examples/7zx.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tests/tests_asyncio.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tests/tests_contrib_logging.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tests/tests_main.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tests/tests_perf.py` -> **100.0%** Exposure
### Weaponizable Injection Vectors
- `tqdm-4.67.3/examples/7zx.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tests/tests_main.py` -> **100.0%** Exposure
### Algorithmic DoS Exposure
- `tqdm-4.67.3/examples/7zx.py` -> **100.0%** Exposure
- `tqdm-4.67.3/examples/redirect_print.py` -> **100.0%** Exposure
- `tqdm-4.67.3/examples/tqdm_wget.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tests/tests_contrib_logging.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tests/tests_main.py` -> **100.0%** Exposure

## 10.7 AUTONOMOUS AI VULNERABILITIES (AGENTIC RCE & PROMPT INJECTION)
> **AI CONTEXT:** Identifies untrusted data flowing into LLM context windows (Prompt Injection) and LLM outputs flowing into dynamic execution (Agentic RCE).

*No autonomous AI vulnerabilities detected.*

## 10.8 ECOSYSTEM SECURITY AUDITS
> **AI CONTEXT:** High-level perimeter defense metrics from the X-Ray, Supply Chain Firewall, and API Network Mapper.

### ☢️ X-Ray & 🧱 Supply Chain Firewall
- **Binary Anomalies (X-Ray):** `1` (High entropy, packed payloads, or magic byte mismatches).
- **Blacklisted Dependencies:** `0` explicitly banned packages imported.
- **Unknown Dependencies:** `245` packages imported that bypass the Zero-Trust whitelist.

## 11. CUMULATIVE RISK HITLIST (Top 10 Highest Risk Files)
> Cumulative Risk is the sum of all individual risk exposures. These files represent the highest multi-dimensional technical debt and architectural fragility.

### 1. `tqdm-4.67.3/tqdm/asyncio.py` (PYTHON) -> Cumulative Risk: **831.59**
- **Archetype:** `file_cluster_4` (Distance: 12.926 IQR)
- **Magnitude:** 221.94 | **LOC:** 94 | **CtrlFlow:** 32.4% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Concurrency (100.0%), Spec Match (100.0%), Documentation (100.0%), Algorithmic Dos (100.0%)
- **Heaviest Functions:** `__init__` (Impact: 56.5), `as_completed` (Impact: 51.4), `gather` (Impact: 37.5)

### 2. `tqdm-4.67.3/tqdm/notebook.py` (PYTHON) -> Cumulative Risk: **811.04**
- **Archetype:** `file_cluster_13` (Distance: 13.402 IQR)
- **Magnitude:** 639.08 | **LOC:** 316 | **CtrlFlow:** 47.4% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Algorithmic Dos (100.0%), Logic Bomb (100.0%), Documentation (99.9363%)
- **Heaviest Functions:** `__init__` (Impact: 254.6), `display` (Impact: 227.5), `status_printer` (Impact: 62.5)

### 3. `tqdm-4.67.3/tqdm/contrib/utils_worker.py` (PYTHON) -> Cumulative Risk: **808.15**
- **Archetype:** `file_cluster_4` (Distance: 12.445 IQR)
- **Magnitude:** 1.04 | **LOC:** 39 | **CtrlFlow:** 29.4% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Concurrency (100.0%), Spec Match (100.0%), Documentation (100.0%), Algorithmic Dos (100.0%)
- **Heaviest Functions:** `submit` (Impact: 81.4), `__init__` (Impact: 2.7)

### 4. `tqdm-4.67.3/tqdm/contrib/discord.py` (PYTHON) -> Cumulative Risk: **799.38**
- **Archetype:** `file_cluster_13` (Distance: 11.931 IQR)
- **Magnitude:** 2.58 | **LOC:** 157 | **CtrlFlow:** 35.0% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Documentation (100.0%), Algorithmic Dos (100.0%), Logic Bomb (100.0%)
- **Heaviest Functions:** `write` (Impact: 53.1), `message_id` (Impact: 37.2), `close` (Impact: 34.9)

### 5. `tqdm-4.67.3/tqdm/contrib/slack.py` (PYTHON) -> Cumulative Risk: **777.19**
- **Archetype:** `file_cluster_13` (Distance: 12.429 IQR)
- **Magnitude:** 2.07 | **LOC:** 121 | **CtrlFlow:** 33.3% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Algorithmic Dos (100.0%), Logic Bomb (100.0%), Documentation (99.9999%)
- **Heaviest Functions:** `write` (Impact: 73.7), `display` (Impact: 49.1), `__init__` (Impact: 20.6)

### 6. `tqdm-4.67.3/tqdm/rich.py` (PYTHON) -> Cumulative Risk: **763.79**
- **Archetype:** `file_cluster_13` (Distance: 11.229 IQR)
- **Magnitude:** 200.7 | **LOC:** 152 | **CtrlFlow:** 33.3% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Tech Debt (100.0%), Spec Match (100.0%), Documentation (100.0%), Algorithmic Dos (100.0%)
- **Heaviest Functions:** `__init__` (Impact: 57.5), `render` (Impact: 32.0), `render` (Impact: 22.5)

### 7. `tqdm-4.67.3/tqdm/gui.py` (PYTHON) -> Cumulative Risk: **750.56**
- **Archetype:** `file_cluster_13` (Distance: 12.614 IQR)
- **Magnitude:** 304.92 | **LOC:** 180 | **CtrlFlow:** 51.0% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Algorithmic Dos (100.0%), Logic Bomb (100.0%)
- **Heaviest Functions:** `__init__` (Impact: 129.0), `display` (Impact: 68.0), `close` (Impact: 42.5)

### 8. `tqdm-4.67.3/tqdm/contrib/concurrent.py` (PYTHON) -> Cumulative Risk: **738.5**
- **Archetype:** `file_cluster_13` (Distance: 11.441 IQR)
- **Magnitude:** 0.95 | **LOC:** 106 | **CtrlFlow:** 28.9% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Algorithmic Dos (100.0%), Logic Bomb (100.0%), State Flux (99.9641%)
- **Heaviest Functions:** `_executor_map` (Impact: 32.1), `process_map` (Impact: 30.9), `ensure_lock` (Impact: 11.0)

### 9. `tqdm-4.67.3/tqdm/contrib/__init__.py` (PYTHON) -> Cumulative Risk: **728.37**
- **Archetype:** `file_cluster_13` (Distance: 12.048 IQR)
- **Magnitude:** 1.36 | **LOC:** 92 | **CtrlFlow:** 30.8% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Documentation (100.0%), Algorithmic Dos (100.0%), Logic Bomb (99.9991%)
- **Heaviest Functions:** `write` (Impact: 60.5), `tenumerate` (Impact: 25.1), `__del__` (Impact: 13.3)

### 10. `tqdm-4.67.3/tqdm/tk.py` (PYTHON) -> Cumulative Risk: **716.66**
- **Archetype:** `file_cluster_13` (Distance: 12.179 IQR)
- **Magnitude:** 367.62 | **LOC:** 197 | **CtrlFlow:** 50.0% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Algorithmic Dos (100.0%), Logic Bomb (100.0%), State Flux (99.9995%)
- **Heaviest Functions:** `__init__` (Impact: 156.8), `close` (Impact: 42.8), `reset` (Impact: 35.1)

## 12. SCANNED ARTIFACTS HITLIST (Top 25 Heaviest Files)
> *Note: 'Magnitude' represents the file's total Structural Magnitude and impact within the system. It is independent of its Risk Profile. High magnitude implies high structural importance and centralization.*

### `tqdm-4.67.3/tqdm/std.py` (PYTHON | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_13` (Drift: 13.798 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 4.74 IQR)
- **Top Global Matches:** file_cluster_13: 13.798, file_cluster_0: 13.845, file_cluster_11: 13.905
- **Magnitude:** 8337.8 | **LOC:** 1525 | **CtrlFlow:** 62.3% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 115
- **Risk Profile:** Cognitive Load (49.1298%), Tech Debt (8.4748%)
**Top Internal Functions/Classes:**
  * `format_meter` (Impact: 7855.4 | O(2^N) | DB: 115)
  * `__format__` (Impact: 58.5 | O(N^5))
  * `format_sizeof` (Impact: 35.6 | O(N^6))
  * `wrapattr` (Impact: 20.3 | O(N^4))
  * `__call__` (Impact: 14.3 | O(N^3) | DB: 1)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 322`, `structural_boundaries: 195`, `args: 64`, `func_start: 61`, `class_start: 10`
* *Risk/State:* `safety_bypasses: 15`, `state_mutation: 244`, `dead_code: 4`, `planned_debt: 1`
* *Architecture:* `io: 14`, `api: 52`, `concurrency: 7`, `import: 29`
* *Defense:* `safety: 90`, `doc: 78`, `test: 2`, `sync_locks: 4`, `cleanup: 7`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 235.368
  * `Choke Point (Betweenness):` 0.031886 | `Ripple Effect (Closeness):` 0.466418
  * `Imports (Out-Degree: 3):` .utils, numpy, tqdm, pandas.core.window.expanding, time, pandas.core.window.rolling, weakref, ._monitor...
  * `Imported By (In-Degree: 20):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tqdm/utils.py` (PYTHON | Tier 2 | 🚨 AI THREAT: 99.16%)
- **Global Archetype:** `file_cluster_13` (Drift: 11.911 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 5.009 IQR)
- **Top Global Matches:** file_cluster_13: 11.911, file_cluster_8: 12.056, file_cluster_0: 12.238
- **Magnitude:** 4526.5 | **LOC:** 400 | **CtrlFlow:** 34.7% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(N) | **DB Complexity:** 0
- **Risk Profile:** Cognitive Load (16.8131%), Tech Debt (10.9097%)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 69`, `structural_boundaries: 130`, `args: 38`, `func_start: 38`, `class_start: 6`
* *Risk/State:* `safety_bypasses: 14`, `state_mutation: 7`, `planned_debt: 1`
* *Architecture:* `io: 4`, `api: 18`, `import: 17`
* *Defense:* `safety: 43`, `doc: 34`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 81.655
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.320303
  * `Imports (Out-Degree: 0):` inspect, warnings, shlex, re, subprocess, tqdm.utils, foo, termios...
  * `Imported By (In-Degree: 6):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tests/tests_tqdm.py` (PYTHON | Tier 2 | 🚨 AI THREAT: 99.16%)
- **Global Archetype:** `file_cluster_13` (Drift: 13.929 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 3.891 IQR)
- **Top Global Matches:** file_cluster_13: 13.929, file_cluster_8: 14.027, file_cluster_0: 14.04
- **Magnitude:** 2069.64 | **LOC:** 1988 | **CtrlFlow:** 34.2% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(N^6) | **DB Complexity:** 104
- **Risk Profile:** Cognitive Load (13.3406%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `test_eta` (Impact: 910.9 | O(N^6) | DB: 104)
  * `test_dynamic_min_iters` (Impact: 353.4 | O(N^6) | DB: 18)
    * *Intent:* # Check with smoothing=0, miniters should be set to max update seen so far with closing(StringIO()) ...
  * `test_max_interval` (Impact: 145.9 | O(N^6) | DB: 10)
    * *Intent:* # Increase 10 iterations at once t.update(bigstep) t2.update(bigstep) # The next iterations should n...
  * `test_smoothing` (Impact: 132.1 | O(N^6) | DB: 3)
    * *Intent:* # Get result for iter-based bar a = progressbar_rate(get_bar(our_file.getvalue(), 3)) # Get result f...
  * `test_bar_format` (Impact: 43.4 | O(N^5) | DB: 1)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 334`, `structural_boundaries: 643`, `args: 99`, `func_start: 99`, `class_start: 5`
* *Risk/State:* `safety_bypasses: 43`, `state_mutation: 217`, `dead_code: 1`, `planned_debt: 3`
* *Architecture:* `io: 29`, `api: 113`, `concurrency: 6`, `import: 23`
* *Defense:* `safety: 300`, `doc: 172`, `test: 343`, `sync_locks: 5`, `cleanup: 41`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 49.337
  * `Choke Point (Betweenness):` 0.011533 | `Ripple Effect (Closeness):` 0.208955
  * `Imports (Out-Degree: 1):` warnings, multiprocessing, re, tqdm.contrib, threading, contextlib, csv, datetime...
  * `Imported By (In-Degree: 14):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tqdm/cli.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_13` (Drift: 12.343 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 4.985 IQR)
- **Top Global Matches:** file_cluster_13: 12.343, file_cluster_11: 12.475, file_cluster_0: 12.574
- **Magnitude:** 678.02 | **LOC:** 325 | **CtrlFlow:** 60.9% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 60
- **Risk Profile:** Cognitive Load (35.0829%), Tech Debt (13.9282%)
**Top Internal Functions/Classes:**
  * `main` (Impact: 317.3 | O(N^6) | DB: 60)
  * `cast` (Impact: 166.3 | O(2^N))
  * `posix_pipe` (Impact: 132.0 | O(N^6))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 81`, `structural_boundaries: 52`, `args: 10`, `func_start: 10`, `class_start: 2`
* *Risk/State:* `safety_bypasses: 6`, `state_mutation: 45`, `dead_code: 1`, `planned_debt: 2`
* *Architecture:* `io: 15`, `api: 13`, `import: 10`
* *Defense:* `safety: 20`, `doc: 13`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 13.832
  * `Choke Point (Betweenness):` 0.002488 | `Ripple Effect (Closeness):` 0.059701
  * `Imports (Out-Degree: 3):` textwrap, .std, re, sys, importlib_resources, pathlib, ast, importlib...
  * `Imported By (In-Degree: 4):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tqdm/notebook.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_13` (Drift: 13.402 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 4.467 IQR)
- **Top Global Matches:** file_cluster_13: 13.402, file_cluster_0: 13.605, file_cluster_11: 13.737
- **Magnitude:** 639.08 | **LOC:** 316 | **CtrlFlow:** 47.4% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 19
- **Risk Profile:** Cognitive Load (25.4397%), Tech Debt (94.1386%)
**Top Internal Functions/Classes:**
  * `__init__` (Impact: 254.6 | O(2^N) | DB: 19)
  * `display` (Impact: 227.5 | O(2^N) | DB: 1)
  * `status_printer` (Impact: 62.5 | O(N^5))
  * `__repr__` (Impact: 14.1 | O(2^N))
  * `_json_` (Impact: 10.8 | O(N^3))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 63`, `structural_boundaries: 70`, `args: 15`, `func_start: 14`, `class_start: 2`
* *Risk/State:* `safety_bypasses: 6`, `state_mutation: 33`, `dead_code: 4`, `fragile_debt: 1`, `duplicate_logic: 2`
* *Architecture:* `io: 3`, `api: 13`, `import: 18`
* *Defense:* `safety: 22`, `doc: 14`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 26.917
  * `Choke Point (Betweenness):` 0.001809 | `Ripple Effect (Closeness):` 0.143284
  * `Imports (Out-Degree: 1):` warnings, ipywidgets, .std, IPython.display, re, compatibility, tqdm.notebook, sys...
  * `Imported By (In-Degree: 6):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tests/tests_perf.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 99.03%)
- **Global Archetype:** `file_cluster_13` (Drift: 10.666 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 4.395 IQR)
- **Top Global Matches:** file_cluster_13: 10.666, file_cluster_0: 10.682, file_cluster_8: 10.815
- **Magnitude:** 505.32 | **LOC:** 316 | **CtrlFlow:** 44.6% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 12
- **Risk Profile:** Cognitive Load (4.9877%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `simple_progress` (Impact: 170.8 | O(N^6) | DB: 3)
  * `test_iter_overhead_hard` (Impact: 49.8 | O(N^4) | DB: 7)
  * `retry_on_except` (Impact: 37.5 | O(N^6))
  * `test_manual_overhead_simplebar_hard` (Impact: 37.5 | O(N^6) | DB: 1)
  * `test_iter_overhead_simplebar_hard` (Impact: 37.4 | O(N^6))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 62`, `structural_boundaries: 77`, `args: 22`, `func_start: 22`
* *Risk/State:* `safety_bypasses: 11`, `state_mutation: 9`, `orphaned_logic: 6`
* *Architecture:* `io: 9`, `api: 22`, `concurrency: 3`, `import: 8`
* *Defense:* `safety: 9`, `doc: 30`, `test: 13`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` contextlib, .tests_tqdm, tqdm, time, sys, functools
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tests/tests_main.py` (PYTHON | Tier 2 | 🚨 AI THREAT: 99.15%)
- **Global Archetype:** `file_cluster_0` (Drift: 12.244 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 6.111 IQR)
- **Top Global Matches:** file_cluster_0: 12.244, file_cluster_13: 12.271, file_cluster_8: 12.406
- **Magnitude:** 454.08 | **LOC:** 245 | **CtrlFlow:** 33.6% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 138
- **Risk Profile:** Cognitive Load (2.7191%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `test_pipes` (Impact: 423.1 | O(2^N) | DB: 138)
  * `restore_sys` (Impact: 11.1 | O(N^3) | DB: 12)
  * `norm` (Impact: 5.4 | O(N^1))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 37`, `structural_boundaries: 73`, `args: 11`, `func_start: 11`
* *Risk/State:* `planned_debt: 1`
* *Architecture:* `io: 50`, `api: 11`, `import: 10`
* *Defense:* `safety: 45`, `doc: 24`, `test: 47`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 5):` subprocess, tqdm.utils, .tests_tqdm, tqdm.__main__, sys, functools, logging, os...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tqdm/tk.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_13` (Drift: 12.179 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 5.539 IQR)
- **Top Global Matches:** file_cluster_13: 12.179, file_cluster_0: 12.552, file_cluster_11: 12.565
- **Magnitude:** 367.62 | **LOC:** 197 | **CtrlFlow:** 50.0% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 12
- **Risk Profile:** Cognitive Load (37.8125%), Tech Debt (15.7951%)
**Top Internal Functions/Classes:**
  * `__init__` (Impact: 156.8 | O(2^N) | DB: 12)
    * *Intent:* """ Experimental Tkinter GUI version of tqdm! Note: Window interactivity suffers if `tqdm_tk` is not...
  * `close` (Impact: 42.8 | O(N^5) | DB: 3)
  * `reset` (Impact: 35.1 | O(2^N))
  * `_tk_dispatching_helper` (Impact: 21.3 | O(N^5) | DB: 3)
  * `set_description_str` (Impact: 20.3 | O(N^4) | DB: 2)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 30`, `structural_boundaries: 30`, `args: 11`, `func_start: 11`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 44`, `dead_code: 1`, `planned_debt: 1`
* *Architecture:* `io: 1`, `api: 13`, `import: 7`
* *Defense:* `safety: 3`, `doc: 14`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` tkinter.ttk, tqdm.tk, warnings, tkinter, .std, re, sys
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tqdm/gui.py` (PYTHON | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_13` (Drift: 12.614 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 4.329 IQR)
- **Top Global Matches:** file_cluster_13: 12.614, file_cluster_11: 12.949, file_cluster_17: 13.0
- **Magnitude:** 304.92 | **LOC:** 180 | **CtrlFlow:** 51.0% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 14
- **Risk Profile:** Cognitive Load (42.9418%), Tech Debt (15.7951%)
**Top Internal Functions/Classes:**
  * `__init__` (Impact: 129.0 | O(2^N) | DB: 14)
  * `display` (Impact: 68.0 | O(N^4) | DB: 3)
  * `close` (Impact: 42.5 | O(2^N) | DB: 2)
  * `clear` (Impact: 3.1 | O(N^2))
  * `tgrange` (Impact: 1.9 | O(N^1))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 25`, `structural_boundaries: 24`, `args: 5`, `func_start: 5`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 4`, `state_mutation: 51`, `dead_code: 2`, `planned_debt: 1`
* *Architecture:* `api: 7`, `import: 7`
* *Defense:* `safety: 1`, `doc: 6`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 74.573
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.293807
  * `Imports (Out-Degree: 1):` matplotlib.pyplot, warnings, .std, tqdm.gui, re, collections, compatibility, matplotlib
  * `Imported By (In-Degree: 3):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tqdm/keras.py` (PYTHON | Tier 2 | 🚨 AI THREAT: 99.03%)
- **Global Archetype:** `file_cluster_13` (Drift: 13.01 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 5.28 IQR)
- **Top Global Matches:** file_cluster_13: 13.01, file_cluster_0: 13.137, file_cluster_11: 13.27
- **Magnitude:** 244.8 | **LOC:** 123 | **CtrlFlow:** 45.3% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 8
- **Risk Profile:** Cognitive Load (46.168%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `on_epoch_begin` (Impact: 68.2 | O(N^5) | DB: 4)
  * `__init__` (Impact: 43.4 | O(N^4) | DB: 8)
    * *Intent:* """ Parameters ---------- epochs : int, optional data_size : int, optional Number of training pairs....
  * `bar2callback` (Impact: 24.6 | O(N^5) | DB: 2)
  * `display` (Impact: 21.3 | O(2^N))
  * `on_train_begin` (Impact: 12.2 | O(N^3))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 24`, `structural_boundaries: 29`, `args: 12`, `func_start: 10`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 42`
* *Architecture:* `api: 15`, `import: 6`
* *Defense:* `safety: 8`, `doc: 6`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 7.271
  * `Choke Point (Betweenness):` 0.000905 | `Ripple Effect (Closeness):` 0.014925
  * `Imports (Out-Degree: 2):` .auto, tensorflow, keras, copy, .notebook, functools
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tests/tests_asyncio.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 98.93%)
- **Global Archetype:** `file_cluster_4` (Drift: 11.779 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 5.904 IQR)
- **Top Global Matches:** file_cluster_4: 11.779, file_cluster_0: 11.94, file_cluster_13: 11.973
- **Magnitude:** 230.8 | **LOC:** 134 | **CtrlFlow:** 37.5% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(N^6) | **DB Complexity:** 0
- **Risk Profile:** Cognitive Load (22.3208%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `test_generators` (Impact: 55.0 | O(N^5))
  * `test_coroutines` (Impact: 36.6 | O(N^5))
  * `test_as_completed` (Impact: 26.8 | O(N^4))
  * `test_nested` (Impact: 21.4 | O(N^6))
  * `test_range` (Impact: 16.6 | O(N^3))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 30`, `structural_boundaries: 50`, `args: 10`, `func_start: 10`
* *Risk/State:* `safety_bypasses: 3`, `orphaned_logic: 7`
* *Architecture:* `api: 10`, `concurrency: 32`, `import: 6`
* *Defense:* `safety: 16`, `doc: 16`, `test: 19`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 2):` asyncio, .tests_tqdm, time, sys, functools, tqdm.asyncio
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tqdm/asyncio.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 98.74%)
- **Global Archetype:** `file_cluster_4` (Drift: 12.926 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 6.526 IQR)
- **Top Global Matches:** file_cluster_4: 12.926, file_cluster_13: 13.206, file_cluster_0: 13.416
- **Magnitude:** 221.94 | **LOC:** 94 | **CtrlFlow:** 32.4% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 6
- **Risk Profile:** Cognitive Load (49.4919%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `__init__` (Impact: 56.5 | O(2^N) | DB: 6)
  * `as_completed` (Impact: 51.4 | O(2^N))
  * `gather` (Impact: 37.5 | O(N^6))
  * `__anext__` (Impact: 20.7 | O(N^4) | DB: 1)
  * `send` (Impact: 6.1 | O(2^N))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 12`, `structural_boundaries: 25`, `args: 8`, `func_start: 8`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 2`, `state_mutation: 21`
* *Architecture:* `api: 9`, `concurrency: 14`, `import: 3`
* *Defense:* `safety: 5`, `doc: 10`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 29.421
  * `Choke Point (Betweenness):` 0.000905 | `Ripple Effect (Closeness):` 0.164179
  * `Imports (Out-Degree: 1):` .std, asyncio, sys, tqdm.asyncio
  * `Imported By (In-Degree: 3):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tqdm/rich.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 98.85%)
- **Global Archetype:** `file_cluster_13` (Drift: 11.229 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 5.047 IQR)
- **Top Global Matches:** file_cluster_13: 11.229, file_cluster_8: 11.492, file_cluster_7: 11.675
- **Magnitude:** 200.7 | **LOC:** 152 | **CtrlFlow:** 33.3% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 4
- **Risk Profile:** Cognitive Load (17.7172%), Tech Debt (100.0%)
**Top Internal Functions/Classes:**
  * `__init__` (Impact: 57.5 | O(2^N) | DB: 4)
  * `render` (Impact: 32.0 | O(N^5))
  * `render` (Impact: 22.5 | O(N^4))
  * `close` (Impact: 14.2 | O(2^N))
  * `reset` (Impact: 14.2 | O(2^N))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 15`, `structural_boundaries: 30`, `args: 10`, `func_start: 10`, `class_start: 3`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 20`, `planned_debt: 1`, `duplicate_logic: 5`
* *Architecture:* `api: 12`, `import: 4`
* *Defense:* `safety: 2`, `doc: 18`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` rich.progress, tqdm.rich, .std, warnings
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/examples/parallel_bars.py` (PYTHON | Tier 2 | 🚨 AI THREAT: 99.15%)
- **Global Archetype:** `file_cluster_13` (Drift: 10.814 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 7.135 IQR)
- **Top Global Matches:** file_cluster_13: 10.814, file_cluster_4: 11.15, file_cluster_8: 11.254
- **Magnitude:** 185.2 | **LOC:** 54 | **CtrlFlow:** 35.5% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 0
- **Risk Profile:** Cognitive Load (45.0166%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `progresser` (Impact: 178.4 | O(2^N))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 11`, `structural_boundaries: 20`, `args: 1`, `func_start: 1`
* *Risk/State:* `dead_code: 1`
* *Architecture:* `api: 1`, `concurrency: 5`, `import: 8`
* *Defense:* `sync_locks: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 2):` tqdm.auto, multiprocessing, tqdm.contrib.concurrent, threading, time, random, functools, concurrent.futures
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tests/tests_synchronisation.py` (PYTHON | Tier 2 | 🚨 AI THREAT: 98.96%)
- **Global Archetype:** `file_cluster_0` (Drift: 12.802 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 5.241 IQR)
- **Top Global Matches:** file_cluster_0: 12.802, file_cluster_13: 12.846, file_cluster_4: 13.162
- **Magnitude:** 179.28 | **LOC:** 208 | **CtrlFlow:** 22.6% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 4
- **Risk Profile:** Cognitive Load (10.9226%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `test_monitoring_multi` (Impact: 32.8 | O(N^5) | DB: 4)
    * *Intent:* # Set high maxinterval for t2 so monitor does not need to adjust it
  * `test_monitoring_and_cleanup` (Impact: 28.0 | O(N^4) | DB: 3)
    * *Intent:* # Do a lot of iterations in a small timeframe # (smaller than monitor interval) Time.fake_sleep(maxi...
  * `patch_sleep` (Impact: 23.1 | O(N^4) | DB: 2)
  * `incr_bar` (Impact: 10.6 | O(N^3))
    * *Intent:* # Test if alive, then killed assert monitor.report() monitor.exit() assert not monitor.report() asse...
  * `wait` (Impact: 7.2 | O(N^3))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 19`, `structural_boundaries: 65`, `args: 15`, `func_start: 15`, `class_start: 3`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 18`, `planned_debt: 2`, `orphaned_logic: 7`
* *Architecture:* `api: 18`, `concurrency: 5`, `import: 6`
* *Defense:* `safety: 20`, `doc: 30`, `test: 21`, `sync_locks: 4`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` multiprocessing, threading, .tests_tqdm, tqdm, time, functools
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/examples/7zx.py` (PYTHON | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_13` (Drift: 9.296 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 5.167 IQR)
- **Top Global Matches:** file_cluster_13: 9.296, file_cluster_8: 9.518, file_cluster_17: 9.813
- **Magnitude:** 163.9 | **LOC:** 118 | **CtrlFlow:** 62.5% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(N^6) | **DB Complexity:** 8
- **Risk Profile:** Cognitive Load (24.4145%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `main` (Impact: 155.3 | O(N^6) | DB: 8)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 25`, `structural_boundaries: 15`, `args: 1`, `func_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 6`
* *Architecture:* `io: 2`, `api: 1`, `import: 7`
* *Defense:* `safety: 4`, `doc: 2`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` re, subprocess, pty, tqdm, argopt, logging, os
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tests/tests_pandas.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 98.85%)
- **Global Archetype:** `file_cluster_8` (Drift: 11.362 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 4.785 IQR)
- **Top Global Matches:** file_cluster_8: 11.362, file_cluster_13: 11.69, file_cluster_0: 11.716
- **Magnitude:** 160.9 | **LOC:** 224 | **CtrlFlow:** 34.7% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(N^5) | **DB Complexity:** 0
- **Risk Profile:** Cognitive Load (2.2781%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `test_pandas_series` (Impact: 83.9 | O(N^5))
  * `test_pandas_rolling_expanding` (Impact: 21.9 | O(N^5))
  * `test_pandas_apply_args_deprecation` (Impact: 14.7 | O(N^3))
  * `test_pandas_deprecation` (Impact: 11.5 | O(N^2))
  * `test_pandas_leave` (Impact: 11.1 | O(N^3))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 26`, `structural_boundaries: 49`, `args: 28`, `func_start: 9`
* *Risk/State:* `safety_bypasses: 1`, `orphaned_logic: 6`
* *Architecture:* `api: 9`, `import: 4`
* *Defense:* `safety: 24`, `doc: 16`, `test: 27`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` tqdm, .tests_tqdm
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tests/tests_contrib_logging.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 99.07%)
- **Global Archetype:** `file_cluster_13` (Drift: 11.754 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 5.576 IQR)
- **Top Global Matches:** file_cluster_13: 11.754, file_cluster_0: 11.882, file_cluster_8: 11.9
- **Magnitude:** 116.94 | **LOC:** 172 | **CtrlFlow:** 13.1% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(N^3) | **DB Complexity:** 8
- **Risk Profile:** Cognitive Load (6.837%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `test_should_inherit_console_logger_forma` (Impact: 27.0 | O(N^3) | DB: 8)
  * `test_should_call_handle_error_if_excepti` (Impact: 7.4 | O(N^3))
  * `test_should_remove_and_restore_console_h` (Impact: 7.4 | O(N^3) | DB: 6)
  * `test_should_not_swallow_certain_exceptio` (Impact: 7.3 | O(N^3))
  * `test_use_root_logger_by_default_and_writ` (Impact: 7.3 | O(N^3))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 11`, `structural_boundaries: 73`, `args: 19`, `func_start: 19`, `class_start: 6`
* *Risk/State:* `safety_bypasses: 5`, `state_mutation: 3`, `duplicate_logic: 4`, `orphaned_logic: 10`
* *Architecture:* `io: 6`, `api: 25`, `import: 10`
* *Defense:* `safety: 33`, `test: 51`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 2):` logging.handlers, .tests_tqdm, tqdm.contrib.logging, tqdm, sys, io, pytest, logging
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tqdm/_monitor.py` (PYTHON | Tier 2 | 🚨 AI THREAT: 98.85%)
- **Global Archetype:** `file_cluster_13` (Drift: 10.256 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 5.31 IQR)
- **Top Global Matches:** file_cluster_13: 10.256, file_cluster_8: 10.486, file_cluster_7: 10.759
- **Magnitude:** 104.28 | **LOC:** 96 | **CtrlFlow:** 33.3% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 6
- **Risk Profile:** Cognitive Load (19.0951%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `run` (Impact: 56.6 | O(N^6) | DB: 1)
  * `get_instances` (Impact: 13.2 | O(N^4))
  * `exit` (Impact: 7.2 | O(N^3))
  * `__init__` (Impact: 6.5 | O(2^N) | DB: 6)
  * `report` (Impact: 2.7 | O(N^2))
    * *Intent:* # Refresh now! (works only for manual tqdm) # Remove accidental long-lived strong reference del inst...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 11`, `structural_boundaries: 22`, `args: 5`, `func_start: 5`, `class_start: 2`
* *Risk/State:* `safety_bypasses: 2`, `state_mutation: 9`
* *Architecture:* `api: 7`, `concurrency: 1`, `import: 4`
* *Defense:* `safety: 1`, `doc: 4`, `sync_locks: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 72.405
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.298622
  * `Imports (Out-Degree: 0):` atexit, threading, warnings, time
  * `Imported By (In-Degree: 2):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/examples/async_coroutines.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 99.06%)
- **Global Archetype:** `file_cluster_4` (Drift: 9.158 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 6.104 IQR)
- **Top Global Matches:** file_cluster_4: 9.158, file_cluster_13: 9.183, file_cluster_8: 9.199
- **Magnitude:** 88.64 | **LOC:** 37 | **CtrlFlow:** 54.5% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(N^6) | **DB Complexity:** 0
- **Risk Profile:** Cognitive Load (46.6372%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `main` (Impact: 63.8 | O(N^6))
  * `count` (Impact: 14.3 | O(N^3))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 12`, `structural_boundaries: 10`, `args: 2`, `func_start: 2`
* *Risk/State:* None
* *Architecture:* `api: 2`, `concurrency: 8`, `import: 2`
* *Defense:* `safety: 1`, `doc: 2`, `test: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` tqdm.asyncio, asyncio
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tqdm/dask.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 98.83%)
- **Global Archetype:** `file_cluster_13` (Drift: 12.165 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 6.017 IQR)
- **Top Global Matches:** file_cluster_13: 12.165, file_cluster_8: 12.786, file_cluster_9: 12.951
- **Magnitude:** 59.2 | **LOC:** 45 | **CtrlFlow:** 15.8% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(2^N) [Recursive] | **DB Complexity:** 1
- **Risk Profile:** Cognitive Load (34.9233%), Tech Debt (99.999%)
**Top Internal Functions/Classes:**
  * `__init__` (Impact: 20.0 | O(2^N) | DB: 1)
    * *Intent:* """ Parameters ---------- tqdm_class : optional `tqdm` class to use for bars [default: `tqdm.auto.tq...
  * `display` (Impact: 14.3 | O(2^N))
  * `_start_state` (Impact: 8.2 | O(N^3) | DB: 1)
  * `_posttask` (Impact: 3.1 | O(N^2) | DB: 1)
  * `_finish` (Impact: 3.1 | O(N^2))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 3`, `structural_boundaries: 16`, `args: 5`, `func_start: 5`, `class_start: 1`
* *Risk/State:* `state_mutation: 7`, `orphaned_logic: 3`
* *Architecture:* `api: 3`, `import: 4`
* *Defense:* `safety: 1`, `doc: 6`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 2):` .auto, .notebook, functools, dask.callbacks
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tests/tests_concurrent.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 98.89%)
- **Global Archetype:** `file_cluster_13` (Drift: 12.381 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 5.517 IQR)
- **Top Global Matches:** file_cluster_13: 12.381, file_cluster_8: 12.533, file_cluster_0: 12.709
- **Magnitude:** 49.64 | **LOC:** 50 | **CtrlFlow:** 33.3% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(N^3) | **DB Complexity:** 0
- **Risk Profile:** Cognitive Load (4.1129%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `test_thread_map` (Impact: 14.4 | O(N^3))
    * *Intent:* """Test contrib.concurrent.thread_map"""
  * `test_process_map` (Impact: 14.4 | O(N^3))
  * `test_chunksize_warning` (Impact: 14.3 | O(N^3))
  * `incr` (Impact: 1.9 | O(N^1))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 9`, `structural_boundaries: 18`, `args: 5`, `func_start: 4`
* *Risk/State:* `orphaned_logic: 3`
* *Architecture:* `api: 4`, `import: 3`
* *Defense:* `safety: 7`, `doc: 10`, `test: 11`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 2):` tqdm.contrib.concurrent, .tests_tqdm, pytest
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/examples/coroutine_pipe.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 98.85%)
- **Global Archetype:** `file_cluster_13` (Drift: 9.6 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 5.516 IQR)
- **Top Global Matches:** file_cluster_13: 9.6, file_cluster_0: 9.749, file_cluster_1: 9.843
- **Magnitude:** 44.82 | **LOC:** 70 | **CtrlFlow:** 35.0% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(N^3) | **DB Complexity:** 1
- **Risk Profile:** Cognitive Load (10.4304%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `tqdm_pipe` (Impact: 10.8 | O(N^3) | DB: 1)
  * `grep` (Impact: 10.6 | O(N^3))
    * *Intent:* """ with tqdm(**tqdm_kwargs) as pbar: while True: obj = (yield) target.send(obj) pbar.update() def s...
  * `source` (Impact: 5.4 | O(N^2))
  * `sink` (Impact: 5.4 | O(N^2))
  * `autonext` (Impact: 2.9 | O(N^2))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 7`, `structural_boundaries: 13`, `args: 6`, `func_start: 6`
* *Risk/State:* `state_mutation: 3`
* *Architecture:* `api: 6`, `import: 2`
* *Defense:* `doc: 4`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` tqdm.auto, functools
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tests/tests_contrib.py` (PYTHON | Tier 1.5 | 🚨 AI THREAT: 98.88%)
- **Global Archetype:** `file_cluster_13` (Drift: 12.869 IQR)
- **Local Micro-Species:** `Cluster 1: Declarative Glue & Initialization` (Drift: 6.231 IQR)
- **Top Global Matches:** file_cluster_13: 12.869, file_cluster_0: 13.003, file_cluster_8: 13.081
- **Magnitude:** 44.22 | **LOC:** 62 | **CtrlFlow:** 22.2% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(N^3) | **DB Complexity:** 0
- **Risk Profile:** Cognitive Load (2.9166%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `test_enumerate` (Impact: 14.6 | O(N^3))
    * *Intent:* """Test contrib.tenumerate"""
  * `test_zip` (Impact: 8.2 | O(N^2))
  * `test_map` (Impact: 8.2 | O(N^2))
  * `test_enumerate_numpy` (Impact: 5.5 | O(N^2))
  * `incr` (Impact: 1.9 | O(N^1))
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 8`, `structural_boundaries: 28`, `args: 6`, `func_start: 5`
* *Risk/State:* `orphaned_logic: 5`
* *Architecture:* `api: 5`, `import: 4`
* *Defense:* `safety: 9`, `doc: 12`, `test: 17`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` tqdm.contrib, tqdm, .tests_tqdm, pytest
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/Makefile` (MAKEFILE | Tier 2 | 🚨 AI THREAT: 99.06%)
- **Global Archetype:** `file_cluster_8` (Drift: 10.274 IQR)
- **Top Global Matches:** file_cluster_8: 10.274, file_cluster_7: 10.95, file_cluster_6: 10.977
- **Magnitude:** 39.96 | **LOC:** 189 | **CtrlFlow:** 50.0% | **Authorship Centralization:** 0.0%
- **Algorithmic:** O(N) | **DB Complexity:** 0
- **Risk Profile:** Cognitive Load (4.397%), Tech Debt (21.1223%)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 1`, `structural_boundaries: 1`, `func_start: 37`
* *Risk/State:* `dead_code: 3`, `planned_debt: 1`
* *Architecture:* `io: 1`, `api: 7`
* *Defense:* `test: 8`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 5.102
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

## 13. ARCHITECTURAL DRIFT ANOMALIES & ANTI-PATTERNS
> **AI CONTEXT:** Pay close attention to 'Anti-Pattern' files. These files blend in globally (Low Global Drift), but heavily violate the standard conventions of their native programming language (High Local Drift). 'Mixed-Responsibility' files sit perfectly between two global archetypes (Delta <= 0.9 IQR), indicating a violation of the Single Responsibility Principle.

### Mixed-Responsibility Refactoring Targets for: file_cluster_0
- `tqdm-4.67.3/tests/tests_main.py` (PYTHON) | Magnitude: 454.08 | Delta: **0.027 IQR** | Secondary Pull: `file_cluster_13`
  * Top Architectural Signatures: indent_spaces: 147, structural_boundaries: 73, io: 50, test: 47
- `tqdm-4.67.3/tests/tests_synchronisation.py` (PYTHON) | Magnitude: 179.28 | Delta: **0.044 IQR** | Secondary Pull: `file_cluster_13`
  * Top Architectural Signatures: indent_spaces: 113, structural_boundaries: 65, doc: 30, test: 21

### Mixed-Responsibility Refactoring Targets for: file_cluster_13
- `tqdm-4.67.3/tests/tests_perf.py` (PYTHON) | Magnitude: 505.32 | Delta: **0.016 IQR** | Secondary Pull: `file_cluster_0`
  * Top Architectural Signatures: indent_spaces: 193, structural_boundaries: 77, branch: 62, doc: 30
- `tqdm-4.67.3/tqdm/std.py` (PYTHON) | Magnitude: 8337.8 | Delta: **0.047 IQR** | Secondary Pull: `file_cluster_0`
  * Top Architectural Signatures: indent_spaces: 806, branch: 322, state_mutation: 244, structural_boundaries: 195
- `tqdm-4.67.3/examples/pandas_progress_apply.py` (PYTHON) | Magnitude: 13.12 | Delta: **0.069 IQR** | Secondary Pull: `file_cluster_9`
  * Top Architectural Signatures: structural_boundaries: 6, dead_code: 5, import: 3, scientific: 2
- `tqdm-4.67.3/tqdm/_main.py` (PYTHON) | Magnitude: 13.64 | Delta: **0.071 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: structural_boundaries: 8, import: 4, encapsulation: 2, indent_spaces: 2
- `tqdm-4.67.3/tqdm/_tqdm.py` (PYTHON) | Magnitude: 13.64 | Delta: **0.071 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: structural_boundaries: 8, import: 4, encapsulation: 2, indent_spaces: 2

### Mixed-Responsibility Refactoring Targets for: file_cluster_4
- `tqdm-4.67.3/examples/async_coroutines.py` (PYTHON) | Magnitude: 88.64 | Delta: **0.025 IQR** | Secondary Pull: `file_cluster_13`
  * Top Architectural Signatures: indent_spaces: 22, branch: 12, structural_boundaries: 10, concurrency: 8
- `tqdm-4.67.3/tests/tests_asyncio.py` (PYTHON) | Magnitude: 230.8 | Delta: **0.161 IQR** | Secondary Pull: `file_cluster_0`
  * Top Architectural Signatures: indent_spaces: 71, structural_boundaries: 50, concurrency: 32, branch: 30
- `tqdm-4.67.3/tqdm/contrib/utils_worker.py` (PYTHON) | Magnitude: 1.04 | Delta: **0.206 IQR** | Secondary Pull: `file_cluster_13`
  * Top Architectural Signatures: indent_spaces: 19, structural_boundaries: 12, state_mutation: 8, concurrency: 7
- `tqdm-4.67.3/tqdm/asyncio.py` (PYTHON) | Magnitude: 221.94 | Delta: **0.28 IQR** | Secondary Pull: `file_cluster_13`
  * Top Architectural Signatures: indent_spaces: 48, structural_boundaries: 25, state_mutation: 21, concurrency: 14

### Mixed-Responsibility Refactoring Targets for: file_cluster_8
- `tqdm-4.67.3/examples/wrapping_generators.py` (PYTHON) | Magnitude: 15.2 | Delta: **0.073 IQR** | Secondary Pull: `file_cluster_13`
  * Top Architectural Signatures: structural_boundaries: 8, branch: 3, safety_bypasses: 3, indent_spaces: 3
- `tqdm-4.67.3/tqdm/__main__.py` (PYTHON) | Magnitude: 11.04 | Delta: **0.082 IQR** | Secondary Pull: `file_cluster_13`
  * Top Architectural Signatures: structural_boundaries: 2, import: 1
- `tqdm-4.67.3/examples/include_no_requirements.py` (PYTHON) | Magnitude: 9.26 | Delta: **0.09 IQR** | Secondary Pull: `file_cluster_13`
  * Top Architectural Signatures: structural_boundaries: 5, indent_spaces: 5, branch: 2, safety: 2
- `tqdm-4.67.3/tqdm/completion.sh` (SHELL) | Magnitude: 13.28 | Delta: **0.102 IQR** | Secondary Pull: `file_cluster_17`
  * Top Architectural Signatures: structural_boundaries: 21, io: 20, indent_spaces: 10, state_mutation: 8
- `tqdm-4.67.3/tests/tests_pandas.py` (PYTHON) | Magnitude: 160.9 | Delta: **0.328 IQR** | Secondary Pull: `file_cluster_13`
  * Top Architectural Signatures: indent_spaces: 140, structural_boundaries: 49, args: 28, test: 27

## 13.5 STRATEGIC REFACTORING TARGETS (Volatility & Authorship Centralization)
> **AI CONTEXT:** Use these intersections to recommend pragmatic next steps. Risk is exponentially worse when combined with high churn (frequent edits) or high authorship centralization (single points of failure).

## 13.8 SYSTEMIC NETWORK BOTTLENECKS (N-Dimensional Topology)
> **AI CONTEXT:** These metrics cross-multiply Network Graph Theory against Risk Exposure to identify the exact mechanisms of runtime failure.

### ☣️ Cascading State Flux (Betweenness * State Flux)
These files act as structural bridges between components, but possess highly volatile, mutating state. They cause unpredictable side-effects for all downstream consumers.

- `tqdm-4.67.3/tqdm/std.py` -> **Severity: 3.188** (Bridge: 0.0319 * Flux: 99.9924%)
- `tqdm-4.67.3/tqdm/cli.py` -> **Severity: 0.248** (Bridge: 0.0025 * Flux: 99.717%)
- `tqdm-4.67.3/tqdm/contrib/concurrent.py` -> **Severity: 0.181** (Bridge: 0.0018 * Flux: 99.9641%)
- `tqdm-4.67.3/tqdm/notebook.py` -> **Severity: 0.179** (Bridge: 0.0018 * Flux: 98.7297%)
- `tqdm-4.67.3/tqdm/contrib/logging.py` -> **Severity: 0.153** (Bridge: 0.0016 * Flux: 96.5941%)

### 🃏 House of Cards (Closeness * Error Risk)
These files are deeply embedded (1 or 2 hops from the entire codebase) but possess high error exposure. A runtime exception here will cascade instantly across the application.

- `tqdm-4.67.3/tqdm/auto.py` -> **Severity: 15.511** (Embedded: 0.2449 * Error Risk: 63.3333%)
- `tqdm-4.67.3/tqdm/_monitor.py` -> **Severity: 14.489** (Embedded: 0.2986 * Error Risk: 48.5185%)
- `tqdm-4.67.3/tqdm/gui.py` -> **Severity: 13.671** (Embedded: 0.2938 * Error Risk: 46.5289%)
- `tqdm-4.67.3/tqdm/autonotebook.py` -> **Severity: 7.818** (Embedded: 0.1421 * Error Risk: 55.0%)
- `tqdm-4.67.3/tqdm/asyncio.py` -> **Severity: 7.806** (Embedded: 0.1642 * Error Risk: 47.5439%)

### 🙈 Opaque Critical Nodes (Dependency Blast Radius * Doc Risk)
These are 'Core Architecture Nodes' that the entire ecosystem relies upon, but they lack human intent, documentation, or ownership metadata. Modifying them is flying blind.

- `tqdm-4.67.3/tqdm/std.py` -> **Severity: 13173.594** (Blast Radius: 235.368 * Doc Risk: 55.9702%)
- `tqdm-4.67.3/tqdm/gui.py` -> **Severity: 7448.105** (Blast Radius: 74.573 * Doc Risk: 99.8767%)
- `tqdm-4.67.3/tqdm/_monitor.py` -> **Severity: 7240.5** (Blast Radius: 72.405 * Doc Risk: 100.0%)
- `tqdm-4.67.3/tqdm/auto.py` -> **Severity: 5897.276** (Blast Radius: 60.316 * Doc Risk: 97.773%)
- `tqdm-4.67.3/tqdm/asyncio.py` -> **Severity: 2942.1** (Blast Radius: 29.421 * Doc Risk: 100.0%)

## AI SYSTEM INSTRUCTIONS (OUTPUT FORMAT)
> **CRITICAL TONE DIRECTIVE:** Act as a Principal Staff Engineer. Use grounded, professional software engineering terminology (e.g., coupling, cohesion, technical debt, single responsibility). DO NOT use sci-fi, dramatic, or sensational jargon (e.g., 'Trojan', 'violently violates', 'parasitic', 'chimeric'). Be objective, practical, and direct.
> **When the user asks for an architectural review, structure your response using these directives:**
> 1. **Information Flow & Purpose (The Executive Summary):** Synthesize the overarching purpose of the codebase. Trace the information flow by analyzing the Top Dependencies ('Imports' and 'Imported By') and the Language Composition. Explain how the system's archetype drives its design, but only mention Z-Score deviations if they are highly abnormal.
> 2. **Notable Structures & Architecture:** Discuss the architecture based on the Dependency Graph. Identify the foundational load-bearers (highest inbound connections) versus the fragile orchestrators (highest outbound imports).
> 3. **Security & Vulnerabilities:** Immediately surface any critical threats flagged in the `AI THREAT INTELLIGENCE (XGBoost)` section. If none exist, briefly confirm the repository is secure from recognized structural threats.
> 4. **Outliers & Extremes:** Focus strictly on statistical anomalies. Highlight files or directory groups with massive Cumulative Risk, severe Z-Scores (Architectural Drift), or extreme spikes in individual risk vectors (like State Flux or Cognitive Load). Ignore normal, healthy code.
> 5. **Recommended Next Steps (Refactoring for Stability):** Provide 2-3 highly specific, pragmatic suggestions focused strictly on reducing outliers. Instruct the user on how to refactor high Z-score files, decouple massive central nodes, or mitigate extreme risk exposures to stabilize the system's architecture.
